[project]
name = "gitline"
version = "0.0.1"
description = "Online? Offline? Gitline!"
authors = [
    {name = "SpectralPixel",email = "encrypteddvjjrxv@gmail.com"}
]
license = {text = "GNU AGPL 3.0"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyp2p (>=0.8.3,<0.9.0)",
    "pyqt6 (>=6.9.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
